update and port is done, FINALLY fixed linkedBlock placement by using networking, LinkedBlockEntity now propagates properly.